kubernetes/apps/observability/opentelemetry/collector/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-syslog-collector
  annotations:
    external-dns.alpha.kubernetes.io/hostname: unifi-syslog.internal
    lbipam.cilium.io/ips: 192.168.20.205
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 514
      targetPort: 514
      protocol: UDP
      name: syslog
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: observability.unifi-syslog
    app.kubernetes.io/name: opentelemetry-collector
