kubernetes/apps/observability/opentelemetry/collector/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: otel-gateway-http
spec:
  hostnames: ["otel.perryhuynh.com"]
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: gateway-collector
          port: 4318
